--- a/app.json
+++ b/app.json
@@ -24,7 +24,8 @@
             "flipper": false
           },
           "android": {
-            "newArchEnabled": false
+            "newArchEnabled": false,
+            "usesCleartextTraffic": true
           }
         }
       ]
