--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
+    "axios": "^1.6.8",
     "expo": "^50.0.11",
     "expo-av": "~13.10.5",
     "expo-build-properties": "~0.11.1",
@@ -14,6 +15,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "npm:react-native-tvos@^0.73.6-1",
+    "react-native-awesome-slider": "^2.5.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "4.12.1",
     "react-native-reanimated": "3.7.1",
