test build android

--- a/app.json
+++ b/app.json
@@ -37,7 +37,8 @@
       "package": "com.pong.androidtvanime"
     },
     "ios": {
-      "userInterfaceStyle": "automatic"
+      "userInterfaceStyle": "automatic",
+      "bundleIdentifier": "com.pong.androidtvanime"
     }
   }
 }
