--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo-splash-screen": "~0.26.3",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
+    "fast-html-parser": "^1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "npm:react-native-tvos@^0.73.6-1",
@@ -23,7 +24,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-storage": "^1.0.1",
     "react-native-vector-icons": "^10.0.3",
-    "rn-secure-storage": "^3.0.1"
+    "rn-secure-storage": "^3.0.1",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@babel/core": "~7.20.0",
