--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
   <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
   <uses-permission android:name="android.permission.VIBRATE"/>
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-  <uses-feature android:name="android.software.leanback" android:required="false" />
+  <uses-feature android:name="android.software.leanback" android:required="true" />
   <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
 
   <queries>
